top, middle, bottom of right. Top paragraph

--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
 </head>
 <body>
     <div class="main">
-        <div class="left">
+        <div class="leftside">
             <h1>Left</h1>
         </div>
-        <div class="right">
-            <h1>Right</h1>
+        <div class="rightside">
+            <div class="top">
+                <p>
+                    This is not a real service. This is a mock sign-up page for the Odin Project. 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. 
+                    <h2>Sign-Up</h2>
+                </p>
+            </div>
+            <div clas="middle">Middle</div>
+            <div class="bottom">Bottom</div>
         </div>
     </div>
 </body>
